--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -17,6 +17,8 @@ body{background-image: url("http://www.wallpaperbetter.com/wallpaper/280/857/216
 p.image{text-align: right;
 
         }
-@-ms-viewport{
-  width: device-width;
+@media screen and (max-width:400px) {
+    @-ms-viewport{
+        width:320px;
+    }
 }
