--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -17,7 +17,7 @@ body{background-image: url("http://www.wallpaperbetter.com/wallpaper/280/857/216
 p.image{text-align: right;
 
         }
-@media screen and (max-width: device-width) {
+@media screen and (max-width: 100%) {
     @-ms-viewport{
         width:device-width;
     }
