--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -19,6 +19,6 @@ p.image{text-align: right;
         }
 @media screen and (max-width: 100%) {
     @-ms-viewport{
-        width:device-width;
+        width:100%;
     }
 }
