--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -12,6 +12,7 @@ p{
 body{background-image: url("http://www.wallpaperbetter.com/wallpaper/280/857/216/ford-gt-4k-2017similar-car-wallpapers-4K-middle-size.jpg");
 
      background-size: 100% ;
+     background-repeat: no-repeat;
     
       }
 p.image{text-align: right;
