--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -11,7 +11,8 @@ p{
 }
 body{background-image: url("http://www.wallpaperbetter.com/wallpaper/280/857/216/ford-gt-4k-2017similar-car-wallpapers-4K-middle-size.jpg");
 
-     background-size: 100% ;
+     background-size: cover ;
+     background-resolution: 200pi;
 
       }
 p.image{text-align: right;
