--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -11,10 +11,13 @@ p{
   color: #fff;
 }
 body{
-     background-image: url("http://www.wallpaperbetter.com/wallpaper/280/857/216/ford-gt-4k-2017similar-car-wallpapers-4K-middle-size.jpg");
+     background-image: url("https://kr.best-wallpaper.net/wallpaper/3840x2160/1609/Ford-GT-supercar-in-high-speed_3840x2160.jpg");
      background-size: cover ;
      background-attachment: fixed;
      background-repeat: no-repeat;
+     width: 100%;
+     height: 100%;
+
 }
 p.image{
         text-align: right;
@@ -29,5 +32,9 @@ p.Taunus{
          margin-right: 200px;
          padding-top: 10px;
 
+}
+html{
+     width: 100%;
+     height: 100%;
 }
 
