--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -11,7 +11,7 @@ p{
   color: #fff;
 }
 body{
-     background-image: url("https://kr.best-wallpaper.net/wallpaper/3840x2160/1609/Ford-GT-supercar-in-high-speed_3840x2160.jpg");
+     background-image: url("http://lifestyle.iloveindia.com/lounge/images/history-of-ford.jpg");
      background-size: cover ;
      background-attachment: fixed;
      background-repeat: no-repeat;
