--- a/2021_b/3Номер html/style.css
+++ b/2021_b/3Номер html/style.css
@@ -11,7 +11,7 @@ p{
   color: #fff;
 }
 body{
-     background-image: url("http://lifestyle.iloveindia.com/lounge/images/history-of-ford.jpg");
+     background-image: url("https://i2.wp.com/www.wallpaperbetter.com/wallpaper/280/857/216/ford-gt-4k-2017similar-car-wallpapers-4K.jpg?resize=3840%2C2160");
      background-size: cover ;
      background-attachment: fixed;
      background-repeat: no-repeat;
